fix invisible validation error message for date selection (#257)

--- a/app/styles/_generic-croodle-styles.scss
+++ b/app/styles/_generic-croodle-styles.scss
@@ -24,3 +24,7 @@
     display: block;
   }
 }
+
+.cr-h-auto {
+  height: auto !important;
+}
